Fixing toggle input and shifting to 16px root font-size

--- a/stencil-lib/src/components/alert/alert.scss
+++ b/stencil-lib/src/components/alert/alert.scss
@@ -10,7 +10,7 @@
   }
 
   &__close {
-    @apply absolute top-1 right-0 z-10;
+    @apply absolute top-0 right-0 z-10;
   }
 
   /* Icon */
